[package]
name = "db-backuper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8.0", features = ["full"] }
tiberius = "0.5.10"
tokio-util = { version = "*", features = ["full"]}
serde = {version = "*", features = ["derive"]}
serde_json = {version = "*"}


